# gis-nyumon

./: .gitignore  README.md  note.ipynb  pyproject.toml  片品村.ipynb  片品村.py
docs/: 片品村.md
