[project]
name = "gis-nyumon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "rioxarray>=0.20.0",
]
